--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autoridad de Energía eléctrica</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="fontawesome-free/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,18 +13,18 @@
 </head>
 <body>
     <div id="topBar">
-        <div class="container" style="margin-bottom: -0.3rem;">
+        <div class="container-sm" style="margin-bottom: -0.3rem;">
            <p>
-            <img src="images/logoPR.png" height="40"/> 
+            <img src="images/logoPR.png" height="30"/> 
             Portal oficial del Gobierno de Puerto Rico.   
             <button class="btn" style="background: none; color: #fff" onclick="showMsg()">
                 <i class="fas fa-chevron-down"></i>
             </button>
         </p>
         </div>
-        <div style="width: 100%;" id="msgContainer">
-            <div class="container" id="msg" style="display: none;">
-                <div class="row bg-light px-5">
+        <div style="width: 100%; display: none; " id="msgContainer">
+            <div class="container-sm" id="msg" style="padding:8px;">
+                <div class="row bg-light px-3">
                     <div class="col">
                         <div class="border-left-msg"></div>
                         <p>    <b>Un sitio web oficial .pr.gov</b> 
@@ -41,10 +41,10 @@
         </div>
 
     </div>
-   <nav class="navbar navbar-expand-lg fixed-top navbar-default bg-light mt-5">
-    <div class="container">
+   <nav class="navbar navbar-expand-lg navbar-default bg-light">
+    <div class="container-sm">
         <a class="navbar-brand" href="#">
-            <img src="images/Logo_aee_-03.png" height="100" class="d-inline-block align-top" id="logo">        </a>
+            <img src="images/Logo_aee_-03.png" height="90" class="d-inline-block align-top" id="logo">        </a>
         
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
