--- a/index__.html
+++ b/index__.html
@@ -157,26 +157,26 @@
         <div class="text-center">
             <h2>We manage the  flow of PR' <br> power supply.</h2>
         </div>
-        <form class="form justify-content-center d-flex flex-row" id="suscribeForm">
-            <div class="form-group mb-2 mx-sm-2">
+        <form class="form justify-content-center row" id="suscribeForm">
+            <div class="form-group mb-2 col-md-3">
                 <input type="text" class="form-control" placeholder="Nombre*">
             </div>
-            <div class="form-group mx-sm-1 mb-2">
+            <div class="form-group mx-sm-3 mb-2 col-md-3">
                 <input type="text" class="form-control" placeholder="E-mail*">
             </div>
-            <div class="form-group mx-sm-2 mb-2">
+            <div class="form-group mx-sm-3 mb-2 col-md-3 text-center">
                 <button type="submit" class="btn btn-primary mb-2 " id="suscribeBtn">Suscribete</button>
             </div>
             
         </form>
-        <div class="text-center m-auto col-sm-12 col-lg-6 ">
+        <div class="text-center container" style="width: 60%;">
             <p>Use either normal contact forms, like the one above, or similar looking mailchimp forms that let your customer directly suscribe to your mailchimp newsletter!</p>
         </div>
     </section>
     <section class="s5 container">
         <h2>We manage the  flow of PR' <br> power supply.</h2>
         <div class="row">
-            <div class="col-sm-12 col-lg-4">
+            <div class="col">
                 <div class="card mt-3 mb-4">
                     <img class="card-img-top" src="images/card.png" alt="Card image cap">
                     <div class="card-body">
@@ -186,7 +186,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-sm-12 col-lg-4">
+            <div class="col">
                 <div class="card mt-3 mb-4">
                     <img class="card-img-top" src="images/card.png" alt="Card image cap">
                     <div class="card-body">
@@ -196,7 +196,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col-sm-12 col-lg-4">
+            <div class="col">
                 <div class="card mt-3 mb-4">
                     <img class="card-img-top" src="images/card.png" alt="Card image cap">
                     <div class="card-body">
@@ -236,7 +236,7 @@
                             <li><a href="#">www.energia.pr.gov</a></li>
                             <li><a href="#">www.recovery.pr</a></li>
                             <li><a href="#">Oficina del Inspector General</a></li> 
-                        </ul>                
+                        </ul>           
                     </div>
                     <div class="col-lg-2 col-md-4">
                         <h6>Contáctenos</h6>
